<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:title="@string/dashboard"
        android:icon="@drawable/home"/>
    </group>

    <item android:title="Profile">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/prof"
                    android:id="@+id/nav_profile"
                    android:title="@string/profile" />
                <item
                    android:icon="@drawable/logout"
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    />

            </group>
        </menu>
    </item>

    <item android:title="About us">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:icon="@drawable/privacy"
                    android:id="@+id/nav_priv"
                    android:title="@string/privacy_policy" />

            </group>
        </menu>
    </item>

</menu>