<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".DashboardDefault">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/pastel"
        app:headerLayout="@layout/menu_header"

        app:menu="@menu/main_menu" />

    <LinearLayout
        android:id="@+id/setbg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">


            <ImageView
                android:id="@+id/menubtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@color/white"
                android:padding="5dp"
                android:src="@android:drawable/ic_menu_sort_by_size" />


        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/app_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="110dp"
                                android:fontFamily="@font/roboto"
                                android:text="Track Trigger"
                                android:textColor="@color/colorAccent"
                                android:textSize="25sp" />

                            <RelativeLayout
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_marginLeft="45dp"
                                android:background="@drawable/button_bg"
                                android:backgroundTint="#FFFF"
                                android:elevation="8dp">

                                <ImageView
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/tt_not_track_trigger" />
                            </RelativeLayout>

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="150dp"
                            android:fontFamily="@font/roboto"
                            android:textColor="@color/colorAccent"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/welcome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:fontFamily="@font/roboto"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">



                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/button_bg"
                            android:backgroundTint="@color/white"
                            android:elevation="8dp">

                            <ImageView
                                android:id="@+id/notesbtn"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/journal" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/diary"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/button_bg"
                            android:backgroundTint="@color/white"
                            android:elevation="8dp">

                            <ImageView
                                android:id="@+id/mybtn"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/calendar" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/calender"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/button_bg"
                            android:backgroundTint="@color/white"
                            android:elevation="8dp">

                            <ImageView
                                android:id="@+id/Paybtn"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/bills" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/payment"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />


                    </LinearLayout>

                </LinearLayout>



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/app_name"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/white"
                    android:elevation="8dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="@color/white"
                        android:padding="5dp"
                        android:src="@drawable/google" />

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="40dp"
                        android:hint="Search" />

                    <Button
                        android:id="@+id/btnSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:backgroundTint="#08134E"
                        android:text="Search" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/inventory"
                            android:textColor="@color/colorAccent"
                            android:textSize="20sp"
                             />



                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/defaultCategories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/blackk">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="My To Does"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                         />

                    <LinearLayout
                        android:id="@+id/profile"
                        android:layout_width="164dp"
                        android:layout_height="393dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/pastel"
                        android:orientation="vertical">


                        <ImageView
                            android:id="@+id/todoBtn"
                            android:padding="12dp"
                            android:layout_marginTop="70dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_width="140dp"
                            android:layout_height="250dp"
                            android:background="@drawable/todolist"
                             />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/profile"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto"
                                android:text="My categories"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                 />
                        <ImageView
                            android:id="@+id/addCategory"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentRight="true"
                            android:background="@color/white"
                            android:padding="5dp"
                            android:src="@android:drawable/ic_input_add" />
                        </RelativeLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/featured"
                            android:layout_width="match_parent"
                            android:layout_height="400dp"
                            android:layout_margin="10dp"

                            android:background="@drawable/pastel" />
                    </LinearLayout>


                </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>